# aether-db

./: Cargo.toml  README.md  websocket_messages.md
crates/client/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: command.rs  db.rs  lib.rs  message.rs
crates/db/: Cargo.toml
crates/db/src/: db.rs  main.rs  store.rs  ws.rs
crates/db/src/db/: mod.rs  table.rs
crates/db/src/ws/: compute.rs  mod.rs  read.rs  write.rs
