[package]
name = "aether-db"
edition = "2021"
version.workspace = true
license.workspace = true

[dependencies]
aether-common = { path = "../common" }
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
# time = { version = "0.3.36", features = ["serde", "serde-human-readable", "serde-well-known"] }
time = { version = "0.3.36", features = ["serde", "serde-well-known"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
